WEM-991: Problems with support instruments/regulations comparison Fix 404 error and css to covers

--- a/sites/all/themes/effoundationtheme/css/contents_comparision_print.css
+++ b/sites/all/themes/effoundationtheme/css/contents_comparision_print.css
@@ -156,7 +156,7 @@ span.restructuring-view-title {
 	}
 	.description-cover{
 		position: absolute;
-		top: 12cm;
+		top: 8cm;
 		left: 30%;
 		width: 60%;
 		z-index: 10;
